# android-cmake-example

./: .gitignore  CMakeLists.txt  README  README.md  local-build.sh
android/: AndroidManifest.xml
src/: main.cpp
src/com/example/androidcmakeexample/: R.java
